# tesla-static-analysis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  lit.cfg
cmake/: Tesla.cmake
cmake/Modules/: FindDot.cmake
demos/: CMakeLists.txt
demos/audit/: Makefile
demos/openssl-api/: Makefile
demos/smoketest/: GNUmakefile
doc/: Doxyfile.in
experiments/: CMakeLists.txt  gather.py
experiments/call_seq/: CMakeLists.txt  main.c
experiments/indirect/: CMakeLists.txt  main.c
experiments/locks/: CMakeLists.txt  address.c  annotate.h  basic.c  basic_indirect.c  bench.c  lock.c  lock.h  main.c  mock.c  more_usage.c  mult_acq.c  mult_rel.c  no_acq.c  no_acq_rel.c  no_rel.c  one_acq.c  other.c  rel_before.c  rel_before_indirect.c  wrong.c
experiments/server/: CMakeLists.txt  client.c  client_handler.c  client_handler.h  main.c  protocol.c  protocol.h  protocol_impl.h  server.c  server_handler.c  server_handler.h  server_lock.h
include/: tesla-macros.h  tesla.h
libtesla/src/: tesla_update.c
libtesla/test/: CMakeLists.txt  lookup.cpp
scripts/: CMakeLists.txt  fbsdmake  tesla  tesla-instrument  test_support.py
tesla/: CMakeLists.txt
tesla/analyser/: AST.cpp  AST.h  CMakeLists.txt  Parser.cpp  Parser.h  Tool.cpp  Visitor.cpp
tesla/archive/: CMakeLists.txt  archive.cpp
tesla/common/: Arguments.cpp  Arguments.h  Automaton.cpp  CMakeLists.txt  Debug.cpp  Debug.h  FSMBuilder.cpp  FSMBuilder.h  Manifest.cpp  Manifest.h  Names.cpp  Names.h  Protocol.cpp  Protocol.h  State.cpp  State.h  Transition.cpp  Transition.h  tesla.proto
tesla/common/fsm/: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cc  finite_state_machine.h
tesla/instrumenter/: Annotations.cpp  Assertion.cpp  Assertion.h  CMakeLists.txt  Callee.cpp  Callee.h  Caller.cpp  Caller.h  FieldReference.cpp  FieldReference.h  InstrContext.cpp  InstrumentPass.cpp  Instrumentation.cpp  Instrumentation.h  ManifestPass.h  ModelChecker.cpp  ModelChecker.h  Remove.cpp  Remove.h  StaticPass.cpp  TraceFinder.h  TranslationFn.cpp  Z3Pass.cpp  Z3Pass.h  instrument.cpp
tesla/model/: CMakeLists.txt  EventGraph.cpp  EventGraph.h  FiniteTraces.cpp  FiniteTraces.h  GraphTransforms.cpp  GraphTransforms.h  ModelChecker.cpp  ModelChecker.h  ModelGenerator.cpp  ModelGenerator.h  SequenceExpressions.cpp  SequenceExpressions.h  model.cpp
tesla/model/include/: BackwardsSearch.h  CartesianProduct.h  EventGraph.h  FiniteTraces.h  GraphTransforms.h  ImplicationCheck.h  Inference.h  ModelChecker.h  ModelGenerator.h
tesla/model/lib/: BackwardsSearch.cpp  CMakeLists.txt  EventGraph.cpp  FiniteTraces.cpp  GraphTransforms.cpp  GraphTransforms.h  ImplicationCheck.cpp  Inference.cpp  ModelChecker.cpp  ModelGenerator.cpp
tesla/static/: AcquireReleaseCheck.cpp  AcquireReleaseCheck.h  AcquireReleasePass.cpp  AcquireReleasePass.h  AcquireSequenceAnalysis.cpp  AcquireSequenceAnalysis.h  AddressTakenAnalysis.cpp  AddressTakenAnalysis.h  Analysis.cpp  Analysis.h  CMakeLists.txt  CallOrderAnalysis.cpp  CallOrderAnalysis.h  CallSequencePass.cpp  CallSequencePass.h  CallsFunctionOnce.cpp  CallsFunctionOnce.h  CheckResult.cpp  ControlPath.cpp  ControlPath.h  ManifestPass.cpp  ManifestPass.h  ManifestPassManager.cpp  ManifestPassManager.h  MissingCallAnalysis.cpp  MissingCallAnalysis.h  ModelCheckerPass.cpp  ModelCheckerPass.h  NoBranchAnalysis.cpp  NoBranchAnalysis.h  OtherLockAnalysis.cpp  OtherLockAnalysis.h  ReachabilityGraph.cpp  ReachabilityGraph.h  ReleaseBeforeAcquireAnalysis.cpp  ReleaseBeforeAcquireAnalysis.h  ReleaseDominanceAnalysis.cpp  ReleaseDominanceAnalysis.h  SimpleCallGraph.cpp  SimpleCallGraph.h  (+4 more)
tesla/static/model-checker/: CheckResult.cpp  InlineAllPass.cpp  InlineAllPass.h  ModelChecker.cpp  ModelChecker.h  StubFunctionsPass.cpp  StubFunctionsPass.h  TraceFinder.cpp  Z3Pass.cpp  Z3Pass.h  Z3Solver.cpp  Z3Solver.h  check_result.cpp  trace_finder.cpp  trace_finder.h  z3_checker.cpp
tesla/static/mutex/: AcquireReleaseCheck.cpp  AcquireReleaseCheck.h  AcquireReleasePass.cpp  AcquireReleasePass.h  Analysis.h  CallOrderAnalysis.cpp  CallsFunctionOnce.cpp  CallsFunctionOnce.h  OtherLockAnalysis.cpp  OtherLockAnalysis.h  ReachabilityGraph.cpp  ReleaseBeforeAcquireAnalysis.cpp  ReleaseBeforeAcquireAnalysis.h
tesla/test/: CMakeLists.txt
tesla/test/Instrumentation/: assertion-site.c  bitmask.c  callee.c  caller.c  caller.ll  combining.c  constant-arg.c  field-assign.c  field-lookup.c  free-variables.c  indirection.c  intptr.c  static.c  suppress-debug.c
tesla/test/Integration/: call.c  field-assign.c  free-variables-mismatch.c  free-variables.c  hold-missing.c  hold.c  ignored.c  indirection.c  release-missing.c  release.c  static.c  threading.c
tesla/test/Parsing/: bitmask.c  free-variables.c  function-call.c
tesla/test/Regression/: kern-args.ll  kern_cpuset.ll  kern_prot.ll  missing-now.ll
tesla/tools/: CMakeLists.txt
tesla/tools/archive/: CMakeLists.txt  archive.cpp
tesla/tools/cat/: cat.cpp
tesla/tools/extract/: CMakeLists.txt  extract.cpp
tesla/tools/get-triple/: CMakeLists.txt
tesla/tools/print/: print.cpp
tesla/trace/: CMakeLists.txt  inline_all_pass.h  smt_gen.cpp  smt_gen.h  smt_text_gen.cpp  smt_text_gen.h  stub_functions_pass.cpp  stub_functions_pass.h  trace.cpp  trace_finder.cpp  trace_finder.h  z3_solve.cpp  z3_solve.h
tesla/trace/include/: z3_checker.h  z3_solve.h
tesla/trace/lib/: CMakeLists.txt  check_result.cpp  inline_all_pass.cpp  smt_text_gen.cpp  stub_functions_pass.cpp  trace_finder.cpp  z3_checker.cpp  z3_solve.cpp
